--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -71,10 +71,10 @@ jobs:
       uses: microsoft/setup-msbuild@2008f912f56e61277eefaac6d1888b750582aa16
 
     - name: Publish
-      run: dotnet publish -c Release
+      run: dotnet publish -c Release -r win-x86
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v2
       with:
         name: App Zip
-        path: .\bin\Release\netcoreapp3.1\
+        path: .\bin\Release\netcoreapp3.1\publish\
